# ai-review

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  review_context.json
.claude/skills/ai-review/: SKILL.md
example/.ai-review/: config.yaml
example/.ai-review/knowledge/: conventions.md  decisions.md
src/ai_review/: __init__.py  arv_cli.py  assist.py  consensus.py  dedup.py  fs_utils.py  git_diff.py  knowledge.py  main.py  models.py  orchestrator.py  prompts.py  server.py  session_manager.py  sse.py  state.py  tools.py  toon_response.py
src/ai_review/static/: index.html
src/ai_review/static/css/: main.css
src/ai_review/static/js/: api.js  app.js  constants.js  resize.js  router.js  state.js  utils.js
src/ai_review/static/js/diff/: highlighter.js  parser.js  renderer.js
src/ai_review/static/js/features/: agent-chat.js  assist.js  opinions.js  sse.js
src/ai_review/static/js/modals/: agent-manager.js  new-session.js  report.js
src/ai_review/static/js/views/: agent-panel.js  changes.js  conversation.js  file-panel.js  issue-detail.js  issue-list.js  reviewers.js  (+1 more)
src/ai_review/trigger/: __init__.py  base.py  cc.py  codex.py  gemini.py  opencode.py
tests/: conftest.py  test_assist.py  test_consensus.py  test_dedup.py  test_git_diff.py  test_issue_status.py  test_knowledge.py  test_models.py  test_orchestrator.py  test_prompts.py  test_server_integration.py  test_session_manager.py  test_sse.py  test_state.py  test_tools.py  test_toon_response.py  test_trigger_cc.py  test_trigger_codex.py  test_trigger_gemini.py  test_trigger_opencode.py
