[project]
name = "ai-review"
version = "0.1.0"
description = "Multi-model AI code review orchestrator with MCP tools"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.10",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "typer>=0.15",
    "fastmcp>=2.3",
    "httpx>=0.28",
    "python-toon>=0.1.0",
]

[project.scripts]
ai-review = "ai_review.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_review"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]
